# cortex

./: .gitignore  ARCHITECTURE.md  README.md  benchmark_query.py  cacheMiniLM.py  caliberate.py  calibrate.py  clip.py  config.toml  downloadmodels.py  main.py  pyproject.toml  requirements.txt  scores.csv  test.py
cortex/: cli.py  downloader.py
cortex/ingestion/: __init__.py  chunking.py  clip.py  store.py  watcher.py
cortex/reasoning/: prompt.py  test_reasoning.py
cortex/retrieval/: search.py
cortex/shared/: models.py
cortex/shared/logger/: logger.py
cortex/shell/: shell.py
cortex/ui/: app.py
cortex/ui/static/: index.html  script.js  style.css
ingestion/: chunking.py  clip.py  store.py  watcher.py
ingestion/file_watcher/: watcher.py
reasoning/: __init__.py  prompt.py  test_reasoning.py
retrieval/: __init__.py  models.py  search.py  store.py
shared/: models.py
shared/logger/: logger.py
