[project]
name = "cortex"
version = "0.1.0"
description = "Local-first semantic search and RAG assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chromadb",
    "sentence-transformers",
    "watchdog",
    "open-clip-torch",
    "pillow",
    "typer",
    "tomlkit",
    "halo",
    "llama-cpp-python",
    "rich",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "pywebview>=6.2.1",
    "qtpy>=2.4.3",
    "markitdown[all]"
]

[project.scripts]
cortex = "cortex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
